# dontcry

./: .env.template  .gitignore  CHANGES.md  README.md  pyproject.toml  requirements.txt  subagent-review.md
.claude/rules/: memory-anchor.md
experiment/: analyze.py  analyze_real.py  results.json  results_real.json  results_v2.json  results_v3.json  results_v5.json  run_experiment.py  run_real.py  run_v2.py  run_v3.py  run_v3_log.txt  run_v4.py  run_v4_log.txt  run_v5.py  statistical_report.md  statistical_report_real.md  tune_alpha.py  tune_results.json
rag_system/: __init__.py  __main__.py  bm25.py  cli.py  config.py  documents.py  embeddings.py  errors.py  llm.py  memory_utils.py  rag.py  reranker.py  retriever.py  session_memory.py  splitter.py  vector_store.py
tests/: agnes_e2e.py  conftest.py  quality_check.py  stress_100.py  test_bm25.py  test_memory_utils.py  test_retriever.py  test_session_memory.py  test_splitter.py  test_vector_store.py
tests/fixtures/: 桃花源记.txt
